--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="/recipes.html">R</a>
+    <a href="./recipes/chicken-salad.html">Chicken Salad Recipe</a>
     
 </body>
 </html>
