Update chicken-salad.html with recipe details.

--- a/recipes/chicken-salad.html
+++ b/recipes/chicken-salad.html
@@ -8,5 +8,42 @@
 </head>
 <body>
     <h1>Chris' World Famous Chicken Salad</h1>
+    <img src="../images/Chicken.png">
+    <h2>What is Chris' World Famous Chicken Salad?</h2>
+    <p>Chris' World Famous Chicken Salad is famous all around the world.
+        Its so famous, that Mr. Worldwide himself told me, Chris, that he was
+        absolutely in love with this recipe. It is well known that this recipe caused
+        the collapse of the Roman Empire is still well loved in Myanmar, so as my
+        gift to the world, I have decided to share such a wonderful recipe.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Love</li>
+        <li>Passion</li>
+        <li>Passion fruit</li>
+        <li>Raisins</li>
+        <li>Dried cranberries</li>
+        <li>Craisins</li>
+        <li>Miracle Whip</li>
+        <li>Even more love</li>
+        <li>The tip of the beak of a chicken</li>
+        <li>Italian Dressing</li>
+        <li>Italians</li>
+        <li>A Megaphone</li>
+        <li>Mayo</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Bake the chicken beak in a 400 degree oven.</li>
+        <li>Add the love and be sure not to burn it as it will become carcinogenic.</li>
+        <li>Cranberry (v.) the hell out of it.</li>
+        <li>Update your LinkedIn.</li>
+        <li>See how successful your friends have become in the same timespan as you.</li>
+        <li>Cry. Just let it all out. Father would never let you do this.</li>
+        <li>By the time the tears stop flowing, add the miracle whip (be sure not to burn it as it will become carcinogenic).</li>
+        <li>The Italian can be a shoulder to cry on, but he/she/they will not like it.</li>
+        <li>Throw the rest of the ingredients out.</li>
+        <li>Enjoy!</li>
+    </ol>
 </body>
 </html>
