Add fried-chicken.html recipe.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/chicken-salad.html">Chicken Salad Recipe</a>
-    
+    <a href="./recipes/chicken-salad.html">Chris' World Famous Chicken Salad</a>
+    <a href="./recipes/fried-chicken.html"></a>
+    <a href=""></a>
 </body>
 </html>
