Update fried-chicken.html with grammar corrections.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
 
     <a href="./recipes/chicken-salad.html">Chris' World Famous Chicken Salad</a>
-    <a href="./recipes/fried-chicken.html"></a>
+    <a href="./recipes/fried-chicken.html">Bob's County-level Infamous Fried Chicken</a>
     <a href=""></a>
 </body>
 </html>
