--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -30,7 +30,7 @@
         <li>Add 100 fl. oz. of Buckminsterfullerine with 31.3 g of angst. (Be careful not to add too much Buckminsterfullerine when mixing with the angst).</li>
         <li>Add, then immediately remove the sense of humour.</li>
         <li>If you have a blow torch, it would be the perfect opportunity to get that insurance money.</li>
-        <li>if (house_is_on_fire) { skip_to_step_7; }</li>
+        <li>if (house_is_on_fire) { skip_to_step_7(); }</li>
         <li>Commit arson (if so inclined).</li>
         <li>Congrats, you forgot the Chicken so pop by KFC and pick yourself a nice, big, tender, juicy, voluptuous, bucket of chicken.</li>
     </ol>
