--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
     <a href="./recipes/chicken-salad.html">Chris' World Famous Chicken Salad</a>
     <a href="./recipes/fried-chicken.html">Bob's County-level Infamous Fried Chicken</a>
-    <a href=""></a>
+    <a href="./recipes/orange-chicken.html">Chicken that is Orange</a>
 </body>
 </html>
