--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="./recipes/chicken-salad.html">Chris' World Famous Chicken Salad</a>
-    <a href="./recipes/fried-chicken.html">Bob's County-level Infamous Fried Chicken</a>
-    <a href="./recipes/orange-chicken.html">Chicken that is Orange</a>
+    <img src="./images/say-my-name.jpg">
+    <ul>
+        <li><a href="./recipes/chicken-salad.html">Chris' World Famous Chicken Salad</a></li>
+        <li><a href="./recipes/fried-chicken.html">Bob's County-level Infamous Fried Chicken</a></li>
+        <li><a href="./recipes/orange-chicken.html">Chicken that is Orange</a></li>
+    </ul>
 </body>
 </html>
