Change to chicken-salad.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Chicken Emporium Recipes</h1>
     <img src="./images/say-my-name.jpg">
     <ul>
         <li><a href="./recipes/chicken-salad.html">Chris' World Famous Chicken Salad</a></li>
