--- a/recipes/chicken-salad.html
+++ b/recipes/chicken-salad.html
@@ -36,7 +36,7 @@
     <ol>
         <li>Bake the chicken beak in a 400 degree oven.</li>
         <li>Add the love and be sure not to burn it as it will become carcinogenic.</li>
-        <li>Cranberry (v.) the hell out of it.</li>
+        <li>Cranberry (verb) the hell out of it.</li>
         <li>Update your LinkedIn.</li>
         <li>See how successful your friends have become in the same timespan as you.</li>
         <li>Cry. Just let it all out. Father would never let you do this.</li>
