Add basic  CSS elements to all .html in /recipes

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="recipe-styles.css">
     <title>Orange Chicken</title>
 </head>
 <body>
     <h1>Chicken that is Orange</h1>
-    <img src="../images/oj.png">
+    <img src="../images/oj.png" class="header-image">
     <h2>How did they do this?</h2>
     <p>Genetic technology has advanced so far in the last few decades that we, at 
         CRISPYR (not to be confused with CRISPR although there may be a cease and desist incoming)
