Fix image centering

--- a/recipes/chicken-salad.html
+++ b/recipes/chicken-salad.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Chris' World Famous Chicken Salad</h1>
-    <img src="../images/Chicken.png">
+    <img src="../images/Chicken.png" class="header-image">
     <h2>What is Chris' World Famous Chicken Salad?</h2>
     <p>Chris' World Famous Chicken Salad is famous all around the world.
         Its so famous, that Mr. Worldwide himself told me, Chris, that he was
