Fix centering on recipe images and text for the "about"

--- a/recipes/chicken-salad.html
+++ b/recipes/chicken-salad.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Chris' World Famous Chicken Salad</h1>
     <img src="../images/Chicken.png" class="header-image">
-    <h2>What is Chris' World Famous Chicken Salad?</h2>
-    <p>Chris' World Famous Chicken Salad is famous all around the world.
+    <h2 class="about-recipe">What is Chris' World Famous Chicken Salad?</h2>
+    <p>Chris' Worl d Famous Chicken Salad is famous all around the world.
         Its so famous, that Mr. Worldwide himself told me, Chris, that he was
         absolutely in love with this recipe. It is well known that this recipe caused
         the collapse of the Roman Empire is still well loved in Myanmar, so as my
