--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Chicken that is Orange</h1>
     <img src="../images/oj.png" class="header-image">
-    <h2>How did they do this?</h2>
+    <h2 class="about-recipe">How did they do this?</h2>
     <p>Genetic technology has advanced so far in the last few decades that we, at 
         CRISPYR have combined America's two favourite ingredients: Chickens and oranges. How did we do it? 
         We're not telling (tee-hee). Okay, fine. We defied the Almighty by splicing the DNA of a chicken egg and combining it with the DNA
