--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Bob's County-level Infamous Fried Chicken</h1>
     <img src="../images/ofc.png" class="header-image">
-    <h2>Bob's County-level Infamous Fried Chicken?</h2>
+    <h2 class="about-recipe">Bob's County-level Infamous Fried Chicken?</h2>
     <p>Men have died in search of this recipe. It is a recipe so heinous, so evil that no man/woman/child
         has ever survived eating this chicken (they all died of old age). Please, do try at home, and with a 
         side of Chris' World Famous Chicken Salad! (Or don't, up to you).
