--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Chicken Emporium Recipes</h1>
-    <img src="./images/say-my-name.jpg">
+    <img src="./images/gusfrig.jpg" class="header-image">
     <ul>
         <li><a href="./recipes/chicken-salad.html">Chris' World Famous Chicken Salad</a></li>
         <li><a href="./recipes/fried-chicken.html">Bob's County-level Infamous Fried Chicken</a></li>
